# winapp

./: CMakeLists.txt  WICTextureLoader.cpp  WICTextureLoader.h  main.cpp
client/: CMakeLists.txt  client.cpp
server/: CMakeLists.txt  server.cpp
